--- a/build.xml
+++ b/build.xml
@@ -14,8 +14,8 @@
     <path id="JUnit 4.libraryclasspath">
         <pathelement location="../../.p2/pool/plugins/org.junit_4.12.0.v201504281640/junit.jar"/>
         <pathelement location="../../.p2/pool/plugins/org.hamcrest.core_1.3.0.v20180420-1519.jar"/>
-    	<fileset dir="$(ant.home)/lib" includes="*.jar"></fileset>
-    	<fileset dir="$(ant.home)/lib/junit" includes="*.jar"></fileset>
+    	<fileset dir="${ant.home}/lib" includes="*.jar"></fileset>
+    	<fileset dir="${ant.home}/lib/junit" includes="*.jar"></fileset>
     </path>
     <path id="unittest.classpath">
         <pathelement location="bin"/>
